<resources>
    <string name="app_name">Bhagavad Gita</string>
    <string name="getting_start">Getting Start</string>
    <string name="welcome">Welcome</string>
    <string name="chapters_text">অধ্যায় সূচি</string>
    <string name="chapter">প্রথম\nঅধ্যায়</string>
    <string name="first_name">ওঁ নমো ভগবতে বাসুদেবায়</string>
    <string name="gita_name">শ্রীমদ্ভগবদ গীতা</string>
    <string name="sonskrit_name">সংস্কৃত</string>
    <string name="bangla_bakko">বাংলা পদ্যে</string>
    <string name="bangla_unubad">বঙ্গানুবাদ</string>
    <string name="wait_dialog_text">Loading....</string>
    <string name="font_size">Font Size</string>
    <string name="font_family">Font Family</string>
    <string name="spacing_font">Spacing Font</string>
    <string name="color_mode">Color Mode</string>
    <string name="normal">Normal</string>
    <string name="verse_select">Verse Select</string>
    <string name="verse_bengali">Bengali verse</string>
    <string name="verse_culture">Culture verse</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="quotes">গীতা-মাহাত্ম্য</string>
    <string name="quotess">শ্রী শ্রী গীতা-মাহাত্ম্য</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="bookmarks_no">There are no\nBookmarks here.</string>
    <string name="last_seen">এই পৃষ্ঠা পড়ছেন</string>
    <string name="mongolaName">মঙ্গলাচরণ</string>
    <string name="mongola">aপার্থে প্রবোধিতে কৃষ্ণ জগৎ কারণ। a\naকুরুক্ষেত্রে গীতাশাস্ত্র করেন কীর্তন। a\naব্যাস তাহা করিলেন ভারতে প্রকাশ। a\naকবিতায় প্রচারিতে আমার প্রয়াস। a\naআশ্রিতের কল্পতরু দেবকীনন্দন। a\naকৃপা কর মোর প্রতি কৃপাবলোকন। a\naগীতার উদ্দিষ্ট তুমি সর্বতত্ত্বসার। a\naপ্রণমিছে তব পদে শ্রীপ্রাকুমার। a</string>
    <string name="read_button">আরও পড়ুন</string>
    <string name="finished">Finished</string>
    <string name="last_ans">কিছুই পড়া হয়নি</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="quiz_title">Exam &amp; Quiz</string>
    <string name="report">App Report</string>
    <string name="support">Support</string>
    <string name="sing_in">Sing in</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="sing_up">Sing up</string>
    <string name="quiz">Quiz</string>
    <string name="final_exam">Final Exam</string>
    <string name="quiz_analysis">Quiz\nAnalysis</string>
    <string name="quiz_question">Quiz Question</string>
    <string name="quiz_text">Question</string>
    <string name="quiz_option">Quiz Option</string>
    <string name="quiz_btn">Ans All</string>
    <string name="quiz_next">Next Question</string>
    <string name="quiz_catalog">Quiz Catalog</string>
    <string name="reports">Report</string>
    <string name="send">Send</string>
    <string name="mark_exam">Mark: 100</string>
    <string name="number">20</string>
    <string name="submit">Submit</string>
    <string name="final_exam_no">It will be informed\nwhen the Exam will start</string>
    <string name="final_quiz_no">It will be informed\nwhen the Quiz will start</string>
    <string name="share">App Share</string>
    <string name="share_btn">Share me</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="heading_a">শ্রীমদ্ভগবত?</string>
    <string name="description_a">"সমস্ত গ্রন্থের মধ্যে শ্রীমদ্ভগবত গীতাকে সবচেয়ে গুরুত্বপূর্ণ মনে করা হয়।"</string>
    <string name="description_b">সাতশত শ্লোকের একটি গ্রন্থ বিধায় একে সপ্তশতী বলে।</string>
    <string name="heading_b">সাতশত শ্লোকের ধর্মগ্রন্থ</string>
    <string name="heading_c">গীতাধ্যায়</string>
    <string name="description_c">গীতা ৭০০টি শ্লোক নিয়ে ১৮টি অধ্যায়ে বিভক্ত।</string>
    <string name="input_massage">Input your massage here</string>
    <string name="select_text">"Select "</string>
    <string name="exam_rule">পরীক্ষার নিয়মাবলী।</string>
    <string name="exam_details">★ ৫০ টির কম বেশি ছোট প্রশ্ন থাকবে।\n★ ৬০ মিনিট দেওয়া হবে পরীক্ষা দেওয়ার জন্য।\n★ একটা প্রশ্নপত্রে একবার পরীক্ষা দিতে পারবেন। আপনি যখন পরীক্ষা শুরু করবেন একবারে সবটা পরীক্ষা দিতে হবে আবার আপনি বের হয়ে আবার পরীক্ষা দিতে পারবেন না।</string>
    <string name="resut_details">Result Details</string>
    <string name="wrong_exam">Wrong\nAnswer</string>
    <string name="correct_exam">Correct\nAnswer</string>
    <string name="thanks_exam">Thanks for Exam</string>
    <string name="total_result">Total Result</string>
    <string name="total_question">Total Question</string>
    <string name="total_select">Total Select</string>
    <string name="time">Time Use</string>
    <string name="exam_percent">Exam Percent</string>
    <string name="exam_timer">\"Start Exam\n\"+\"%02d min : %02d sec\"</string>
    <string name="login_text">You have to acoount please login</string>
    <string name="singup_text">You don\'t have to account please Sing up</string>
    <string name="name_hint">Input your Name</string>
    <string name="do_account">Don\'t have an account? Sing up</string>
    <string name="have_account">Have an Account? Sing in</string>
    <string name="email_hint">Input your Email</string>
    <string name="register_link">https://banglabhagavad.com/my_file/gita_userlogin.php</string>
    <string name="exam_link">https://banglabhagavad.com/my_file/exam_data.php</string>
    <string name="quiz_link">https://banglabhagavad.com/my_file/quiz_data.php</string>
    <string name="save_link">https://banglabhagavad.com/my_file/my_data.php</string>
    <string name="exam_score">Score Board</string>
    <string name="exam_start">Exam Sheet</string>
    <string name="details_play">Quiz all played</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_massage">You do not have an account\nPlease create a new account</string>
    <string name="massage_forget">Please check your Number</string>
    <string name="check">Check</string>
    <string name="phone_input_hint">Input Full number</string>
    <string name="leaderboard">Leader Board</string>
    <string name="profile">Profile</string>
    <string name="category_quiz">Categories</string>
    <string name="number0">0</string>
    <string name="score_details">New score list\nprocess..</string>
    <string name="details_level">Quiz level</string>
    <string name="monthly_win_quiz">This month Quiz winner</string>
    <string name="monthly_win_exam">This month Exam winner</string>
    <string name="first_number">1st</string>
    <string name="total_score">0\nTotal score</string>
    <string name="monthly_score">0\nMonthly score</string>
    <string name="correct_score">0\nCorrect score</string>
    <string name="wrong_score">0\nWrong score</string>
    <string name="last_play">Last play</string>
    <string name="next_level">Need 500 Score for next level</string>
    <string name="first_win_quiz">Name of win</string>
    <string name="score">0\nScore</string>
    <string name="second_number">2nd</string>
    <string name="third_number">3rd</string>
    <string name="privacy">Privacy Policy</string>
</resources>