<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group
    android:id="@+id/group1">
    <item
        android:id="@+id/test_exam"
        android:icon="@drawable/icon_check"
        android:title="@string/quiz_title"
        app:actionLayout="@layout/action_lottiew"/>
</group>
    <group
        android:id="@+id/group2">
        <item
            android:icon="@drawable/support_agent"
            android:id="@+id/support"
            android:title="@string/support">

        </item>

        <item
            android:icon="@drawable/support_agent"
            android:id="@+id/privacy"
            android:title="@string/privacy">

        </item>
        <item
            android:icon="@drawable/share_icon"
            android:id="@+id/share"
            android:title="@string/share">
        </item>
    </group>
</menu>
