<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_40"
    android:paddingRight="@dimen/dp_40"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopStart="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/phone_icon"
                android:drawableTint="@color/purple_700"
                android:id="@+id/phone_sing_in"
                android:hint="@string/phone_hint"
                android:inputType="textEmailAddress"
                android:maxLength="12"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopStart="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/password_hint"
                android:id="@+id/password_sing_in"
                android:drawableTint="@color/purple_700"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing_in"
                android:layout_margin="@dimen/dp_15"
                android:id="@+id/user_sing_in"
                android:background="@drawable/button_select"
                android:textAllCaps="false"/>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:id="@+id/text_btn_register"
        android:text="@string/do_account"
        android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/forget_password"
            android:id="@+id/password_forget"
            android:textAlignment="center"
            android:textSize="16sp" />
</LinearLayout>