<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">
    <ImageView
        android:alpha="0.3"
        android:layout_width="@dimen/size_dialog"
        android:layout_height="@dimen/size_dialog"
        android:scaleType="fitXY"
        android:src="@drawable/down_frame"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:id="@+id/text_main_dialog"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:paddingHorizontal="@dimen/dp_100"
            android:paddingVertical="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_below="@id/text_main_dialog"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good "
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Morning"
                    android:textSize="32sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#deff00" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:id="@+id/text_small"
            android:text="@string/heading_b"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <include
        android:visibility="gone"
        android:id="@+id/include_login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/sing_in_from"/>
    <include
        android:visibility="gone"
        android:id="@+id/include_sing_up"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/singup_from"/>
    <LinearLayout
        android:id="@+id/login_register_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/login_text"/>
        <Button
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_in"
            android:id="@+id/btn_login"
            android:background="@drawable/button_select"
            android:textAllCaps="false"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/singup_text"/>
        <Button
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/button_select"
            android:text="@string/sing_up"
            android:textAllCaps="false"/>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>