<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment.PasswordFragment">
    <ImageView
        android:alpha="0.3"
        android:layout_width="@dimen/size_dialog"
        android:layout_height="@dimen/size_dialog"
        android:scaleType="fitXY"
        android:src="@drawable/down_frame"
        android:contentDescription="@string/app_name"/>

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/text_main_dialog"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:paddingHorizontal="@dimen/dp_50"
            android:paddingVertical="@dimen/dp_10"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"/>
      </LinearLayout>
       <com.google.android.material.card.MaterialCardView
           android:id="@+id/card_pass"
           android:layout_width="match_parent"
           app:cardCornerRadius="@dimen/dp_10"
           app:cardElevation="@dimen/dp_5"
           android:layout_margin="@dimen/dp_20"
           android:layout_height="match_parent">
           <LinearLayout
               android:padding="@dimen/dp_20"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
               <TextView
                   android:textStyle="bold"
                   android:padding="@dimen/dp_10"
                   android:id="@+id/forget_msg"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/massage_forget"/>
               <LinearLayout
                   android:padding="@dimen/dp_5"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:gravity="center"
                   android:id="@+id/text_box"/>

               <com.google.android.material.textfield.TextInputLayout
                   android:padding="@dimen/dp_5"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/forget_input"
                   app:boxCornerRadiusBottomEnd="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="28dp"
                   app:boxCornerRadiusTopStart="28dp"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/phone_forget"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:drawableStart="@drawable/phone_icon"
                       android:drawablePadding="16dp"
                       android:drawableTint="@color/purple_700"
                       android:hint="@string/phone_input_hint"
                       android:inputType="number"
                       android:maxLength="12"
                       android:maxLines="1"
                       android:textSize="16sp" />
               </com.google.android.material.textfield.TextInputLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:orientation="horizontal">
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/check"
                       android:layout_margin="@dimen/dp_15"
                       android:id="@+id/user_password_in"
                       android:background="@drawable/button_select"
                       android:textAllCaps="false"/>
               </LinearLayout>
           </LinearLayout>
       </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/animation_view_password"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/load_krishna"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/no_forget_text"
            android:layout_gravity="center"
            android:text="@string/forget_massage"/>
    </LinearLayout>
</FrameLayout>