<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40">
        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopStart="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/user_icon"
                android:drawableTint="@color/purple_700"
                android:hint="@string/name_hint"
                android:id="@+id/name_sing_up"
                android:maxLength="12"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopStart="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/phone_icon"
                android:hint="@string/phone_hint"
                android:id="@+id/phone_sing_up"
                android:inputType="number"
                android:drawableTint="@color/purple_700"
                android:maxLines="1"
                android:maxLength="12"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopStart="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/password_hint"
                android:id="@+id/password_sing_up"
                android:drawableTint="@color/purple_700"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/dp_15"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:id="@+id/user_sing_up"
                android:background="@drawable/button_select"
                android:textAllCaps="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_20"
                android:id="@+id/text_btn_sing_in"
                android:text="@string/have_account"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>