<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/dp_20"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/dp_20"
    app:cardElevation="@dimen/dp_10"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/close_dialog_exam"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_ripple"
            android:focusable="true"
            android:src="@drawable/close_icon" />
        <ImageView
            android:id="@+id/image_start_exam"
            android:layout_margin="@dimen/dp_30"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_exam"/>
        <TextView
            android:textSize="@dimen/sp_20"
            android:padding="@dimen/dp_20"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/image_start_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_rule"
            android:id="@+id/exam_header"/>
        <TextView
            android:padding="@dimen/dp_20"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/exam_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_details"
            android:id="@+id/exam_description"/>

        <Button
            android:id="@+id/exam_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_30"
            android:text="@string/let_get_started" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>